@@ -418,6 +418,11 @@ name|rename
 init|=
 literal|false
 decl_stmt|;
+name|Table
+name|oldt
+init|=
+literal|null
+decl_stmt|;
 try|try
 block|{
 name|msdb
@@ -513,9 +518,8 @@ literal|true
 expr_stmt|;
 block|}
 comment|// get old table
-name|Table
 name|oldt
-init|=
+operator|=
 name|msdb
 operator|.
 name|getTable
@@ -524,7 +528,7 @@ name|dbname
 argument_list|,
 name|name
 argument_list|)
-decl_stmt|;
+expr_stmt|;
 if|if
 condition|(
 name|oldt
@@ -1137,6 +1141,68 @@ name|IOException
 name|e
 parameter_list|)
 block|{
+name|boolean
+name|revertMetaDataTransaction
+init|=
+literal|false
+decl_stmt|;
+try|try
+block|{
+name|msdb
+operator|.
+name|openTransaction
+argument_list|()
+expr_stmt|;
+name|msdb
+operator|.
+name|alterTable
+argument_list|(
+name|dbname
+argument_list|,
+name|newt
+operator|.
+name|getTableName
+argument_list|()
+argument_list|,
+name|oldt
+argument_list|)
+expr_stmt|;
+name|revertMetaDataTransaction
+operator|=
+name|msdb
+operator|.
+name|commitTransaction
+argument_list|()
+expr_stmt|;
+block|}
+catch|catch
+parameter_list|(
+name|Exception
+name|e1
+parameter_list|)
+block|{
+name|LOG
+operator|.
+name|error
+argument_list|(
+literal|"Reverting metadata opeation failed During HDFS operation failed"
+argument_list|,
+name|e1
+argument_list|)
+expr_stmt|;
+if|if
+condition|(
+operator|!
+name|revertMetaDataTransaction
+condition|)
+block|{
+name|msdb
+operator|.
+name|rollbackTransaction
+argument_list|()
+expr_stmt|;
+block|}
+block|}
 throw|throw
 operator|new
 name|InvalidOperationException
